--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "coffee ./test/index.coffee",
+    "test": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register",
     "performanceTest": "coffee ./test/performance/index.coffee"
   },
   "bin": "./bin/cli.js",
@@ -32,7 +32,9 @@
     "three": "^0.69.0"
   },
   "dependencies": {
+    "chai": "^1.10.0",
     "coffee-script": "^1.8.0",
-    "commander": "^2.6.0"
+    "commander": "^2.6.0",
+    "mocha": "^2.1.0"
   }
 }
