--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "chai": "^1.10.0",
     "coffee-script": "^1.8.0",
+    "coffee-script": "^1.9.0",
     "commander": "^2.6.0",
     "mocha": "^2.1.0"
   }
