--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register",
-    "performanceTest": "coffee ./test/performance/index.coffee"
+    "performanceTest": "coffee ./test/performance.coffee"
   },
   "bin": "./bin/cli.js",
   "keywords": [
@@ -20,22 +20,25 @@
   "author": "Lowfab",
   "license": "MIT",
   "devDependencies": {
+    "chai": "^1.10.0",
     "es6-promise": "^2.0.1",
     "express": "^4.11.1",
     "filesaver.js": "^0.1.1",
     "fsp": "^0.1.2",
+    "git-rev": "^0.2.1",
+    "jade": "^1.9.1",
     "mkdirp": "^0.5.0",
+    "mocha": "^2.1.0",
     "string.prototype.endswith": "^0.2.0",
     "string.prototype.includes": "^1.0.0",
     "string.prototype.startswith": "^0.2.0",
     "text-encoding": "^0.5.2",
-    "three": "^0.69.0"
+    "three": "^0.69.0",
+    "winston": "^0.9.0"
   },
   "dependencies": {
-    "chai": "^1.10.0",
-    "coffee-script": "^1.8.0",
     "coffee-script": "^1.9.0",
     "commander": "^2.6.0",
-    "mocha": "^2.1.0"
+    "fs-promise": "^0.3.1"
   }
 }
