--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jade": "^1.9.1",
     "mkdirp": "^0.5.0",
     "mocha": "^2.1.0",
+    "readdirp": "^1.3.0",
     "string.prototype.endswith": "^0.2.0",
     "string.prototype.includes": "^1.0.0",
     "string.prototype.startswith": "^0.2.0",
