--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "winston": "^0.9.0"
   },
   "dependencies": {
+    "chai-as-promised": "^4.1.1",
     "coffee-script": "^1.9.0",
     "commander": "^2.6.0",
     "es6-promise": "^2.0.1",
