Add repository field to package file (fix #16)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "stl",
     "mesh"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Lowfab/meshlib.git"
+  },
   "author": "Lowfab",
   "license": "MIT",
   "devDependencies": {
