--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meshlib",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "JavaScript library for importing, handling & exporting various 3D file formats",
   "main": "index.js",
   "browser": "build/index",
@@ -18,23 +18,50 @@
     "mesh"
   ],
   "author": "Lowfab",
+  "contributors": [
+    {
+      "name": "Adrian Sieber"
+    },
+    {
+      "name": "Arthur Silber"
+    },
+    {
+      "name": "Johannes Deselaers"
+    },
+    {
+      "name": "Stefan Neubert"
+    },
+    {
+      "name": "Yannis Kommana"
+    }
+  ],
   "license": "MIT",
-  "devDependencies": {
+  "bugs": "http://github.com/Lowfab/meshlib/issues",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/Lowfab/meshlib.git"
+  },
+  "homepage": "https://github.com/Lowfab/meshlib",
+  "dependencies": {
+    "chai": "^1.10.0",
+    "coffee-script": "^1.8.0",
+    "commander": "^2.6.0",
     "es6-promise": "^2.0.1",
-    "express": "^4.11.1",
     "filesaver.js": "^0.1.1",
-    "fsp": "^0.1.2",
-    "mkdirp": "^0.5.0",
+    "mocha": "^2.1.0",
     "string.prototype.endswith": "^0.2.0",
     "string.prototype.includes": "^1.0.0",
     "string.prototype.startswith": "^0.2.0",
     "text-encoding": "^0.5.2",
     "three": "^0.69.0"
   },
-  "dependencies": {
-    "chai": "^1.10.0",
-    "coffee-script": "^1.8.0",
-    "commander": "^2.6.0",
-    "mocha": "^2.1.0"
+  "devDependencies": {
+    "express": "^4.11.1",
+    "fsp": "^0.1.2",
+    "mkdirp": "^0.5.0"
+  },
+  "private": true,
+  "engines": {
+    "node": "~0.12.0"
   }
 }
