--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meshlib",
-  "version": "0.2.3",
+  "version": "0.2.2",
   "description": "JavaScript library for importing, handling & exporting various 3D file formats",
   "main": "index.js",
   "browser": "build/index",
@@ -17,6 +17,10 @@
     "stl",
     "mesh"
   ],
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/Lowfab/meshlib.git"
+  },
   "author": "Lowfab",
   "contributors": [
     {
@@ -37,28 +41,29 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/Lowfab/meshlib/issues",
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/Lowfab/meshlib.git"
-  },
   "homepage": "https://github.com/Lowfab/meshlib",
   "dependencies": {
-    "chai": "^1.10.0",
-    "coffee-script": "^1.8.0",
+    "coffee-script": "^1.9.0",
     "commander": "^2.6.0",
     "es6-promise": "^2.0.1",
     "filesaver.js": "^0.1.1",
-    "mocha": "^2.1.0",
+    "fs-promise": "^0.3.1",
     "string.prototype.endswith": "^0.2.0",
     "string.prototype.includes": "^1.0.0",
     "string.prototype.startswith": "^0.2.0",
     "text-encoding": "^0.5.2",
-    "three": "^0.69.0"
+    "three": "^0.69.0",
+    "winston": "^0.9.0"
   },
   "devDependencies": {
+    "chai": "^2.0.0",
+    "chai-as-promised": "^4.2.0",
     "express": "^4.11.1",
-    "fsp": "^0.1.2",
-    "mkdirp": "^0.5.0"
+    "git-rev": "^0.2.1",
+    "jade": "^1.9.2",
+    "mkdirp": "^0.5.0",
+    "mocha": "^2.1.0",
+    "readdirp": "^1.3.0"
   },
   "private": true,
   "engines": {
