--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "jade": "^1.9.2",
     "mkdirp": "^0.5.0",
     "mocha": "^2.1.0",
-    "readdirp": "^1.3.0"
+    "readdirp": "^1.3.0",
+    "stl-models": "Lowfab/stl-models#af96ff593d3490eac9f708f26a05d6261aed49a4"
   },
   "private": true,
   "engines": {
