Use yaml for test-models, add multi-geometrie model

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "es6-promise": "^2.0.1",
     "filesaver.js": "^0.1.1",
     "fs-promise": "^0.3.1",
+    "js-yaml": "^3.2.7",
     "string.prototype.endswith": "^0.2.0",
     "string.prototype.includes": "^1.0.0",
     "string.prototype.startswith": "^0.2.0",
