--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --compilers coffee:coffee-script/register",
     "testPerformance": "coffee ./test/performance.coffee",
-    "checkStyle": "./node_modules/.bin/coffeelint ."
+    "checkStyle": "./node_modules/.bin/coffeelint .",
+    "build": "./node_modules/.bin/coffee -co build source"
   },
   "bin": "./bin/cli.js",
   "keywords": [
