--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
   "dependencies": {
     "coffee-script": "^1.9.0",
     "commander": "^2.6.0",
+    "deg2rad": "^1.0.0",
     "es6-promise": "^2.0.1",
     "filesaver.js": "^0.1.1",
     "fs-promise": "^0.3.1",
     "js-yaml": "^3.2.7",
+    "rad2deg": "^1.0.0",
     "string.prototype.endswith": "^0.2.0",
     "string.prototype.includes": "^1.0.0",
     "string.prototype.startswith": "^0.2.0",
