--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "testPerformance": "coffee ./test/performance.coffee",
     "checkStyle": "./node_modules/.bin/coffeelint .",
     "build": "./node_modules/.bin/coffee -co build source",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build && npm test"
   },
   "bin": "./bin/cli.js",
   "keywords": [
