--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "JavaScript library for importing, handling & exporting various 3D file formats",
   "main": "build/index.js",
   "browser": "build/index",
+  "bin": {
+    "meshlib": "./cli/index.js",
+    "meshlib-coffee": "./cli/index.coffee"
+  },
   "directories": {
     "test": "test"
   },
@@ -14,7 +18,6 @@
     "build": "rm -r build && ./node_modules/.bin/coffee -co build source",
     "prepublish": "npm run build && npm test"
   },
-  "bin": "./bin/cli.js",
   "keywords": [
     "3d",
     "stl",
