--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "meshlib",
   "version": "0.7.3",
   "description": "JavaScript library for importing, handling & exporting various 3D file formats",
+  "type": "module",
   "main": "build/index.js",
   "browser": "build/index",
   "bin": {
@@ -10,13 +11,6 @@
   },
   "directories": {
     "test": "test"
-  },
-  "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register",
-    "testPerformance": "coffee ./test/performance.coffee",
-    "checkStyle": "coffeelint .",
-    "build": "rm -rf build && coffee -co build source",
-    "prepublish": "npm run build && npm test"
   },
   "keywords": [
     "3d",
@@ -79,7 +73,7 @@
     "git-rev": "^0.2.1",
     "jade": "^1.9.2",
     "mkdirp": "^0.5.0",
-    "mocha": "^2.1.0",
+    "mocha": "^11.1.0",
     "readdirp": "^1.3.0",
     "stl-models": "Lowfab/stl-models#af96ff593d3490eac9f708f26a05d6261aed49a4"
   }
