--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "meshlib",
   "version": "0.7.3",
-  "description": "JavaScript library for importing, handling & exporting various 3D file formats",
+  "description": "Library for importing, handling & exporting various 3D file formats",
   "type": "module",
   "main": "build/index.js",
-  "browser": "build/index",
   "bin": {
-    "meshlib": "./cli/index.js",
-    "meshlib-dev": "./cli/index-dev.js"
+    "meshlib": "./build/cli/index.js"
   },
   "directories": {
     "test": "test"
@@ -64,8 +62,16 @@
     "winston": "^0.9.0"
   },
   "devDependencies": {
-    "chai": "^2.0.0",
-    "chai-as-promised": "^4.2.0",
+    "@types/chai": "^4.3.20",
+    "@types/chai-as-promised": "^8.0.2",
+    "@types/chai-json-schema": "^1.4.10",
+    "@types/js-yaml": "^4.0.9",
+    "@types/mocha": "^10.0.7",
+    "@types/ndjson": "^2.0.4",
+    "@types/node": "^20.17.30",
+    "@types/three": "^0.166.0",
+    "chai": "^4.4.1",
+    "chai-as-promised": "^7.1.2",
     "chai-json-schema": "^1.2.0",
     "coffeelint": "^1.9.2",
     "coffeelint-newline-at-eof": "^0.4.1",
@@ -73,8 +79,11 @@
     "git-rev": "^0.2.1",
     "jade": "^1.9.2",
     "mkdirp": "^0.5.0",
-    "mocha": "^11.1.0",
+    "mocha": "^10.6.0",
     "readdirp": "^1.3.0",
-    "stl-models": "Lowfab/stl-models#af96ff593d3490eac9f708f26a05d6261aed49a4"
-  }
+    "stl-models": "Lowfab/stl-models#af96ff593d3490eac9f708f26a05d6261aed49a4",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
